# dsio

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: main.py
src/app/batch/olympic/: batch_item.py  batch_schedule.py  batch_sport.py  batch_stadium.py  batch_update_schedule.py  collect_code.py  collect_schedule.py  collect_sport.py  common.py  displine.json  insert_col.py  item.json  update_col.py
src/app/cli/: olympic.py
src/app/common/: http.py
src/app/core/: config.py
src/app/db/: session.py
src/app/nosql/mongo/: session.py
